Update word source and CORS settings
- Changed text file reference from `portuguese.txt` to `teste.txt` in `PalavrimAPI.csproj`.
- Adjusted CORS allowed origins in `Program.cs` to prioritize local development.
- Updated word validation and search logic in `PalavrimServices.cs` to handle accents.
- Commented out production API base URL in `script.js`.
- Added a new list of words to `teste.txt` to expand vocabulary.

--- a/PalavrimAPI.csproj
+++ b/PalavrimAPI.csproj
@@ -19,7 +19,8 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-		<None Update="PalavrimWordList\portuguese.txt">
+		<None Update="PalavrimWordList\teste.txt">
+			<!--<None Update="PalavrimWordList\portuguese.txt">-->
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
