--- a/PalavrimAPI.csproj
+++ b/PalavrimAPI.csproj
@@ -10,18 +10,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Content Include="PalavrimWordList\*.txt">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Folder Include="Controllers\" />
-	</ItemGroup>
-	
-	<ItemGroup>
-		<None Update="PalavrimWordList\portugueseV2.txt">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 	</ItemGroup>
 
 </Project>
